--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -1,29 +1,31 @@
 @import "@variables";
 
-.like-button, .toggle-button__elem {
-  display: flex;
-  height: 20px;
-  width: 40px;
-  border-radius: 10px;
-  border-style: solid;
-  border-width: 1px;
-  margin-right: 10px;
-  box-sizing: border-box;
-  cursor: pointer;
-  border-color: $valhalla;
-  color: $valhalla;
-  opacity: .25;
+.button {
+  &_frame {
+    display: flex;
+    height: 20px;
+    width: 40px;
+    box-sizing: border-box;
+    margin-right: 10px;
+    border-radius: 10px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: $valhalla;
+    color: $valhalla;
+    opacity: .25;
+    cursor: pointer;
 
-  &_pressed {
-    border-color: $perfume;
-    color: $perfume;
-    opacity: 1;
+    &:checked {
+      border-color: $perfume;
+      color: $perfume;
+      opacity: 1;
+    }
   }
-}
 
-.dot {
-  height: 12px;
-  width: 12px;
-  background-color: $valhalla;
-  border-radius: 50%;
+  &_dot-marker {
+    height: 12px;
+    width: 12px;
+    background-color: $valhalla;
+    border-radius: 50%;
+  }
 }
