--- a/src/components/buttons/toggle/toggle.scss
+++ b/src/components/buttons/toggle/toggle.scss
@@ -9,6 +9,7 @@
     display: inherit;
     align-items: center;
     appearance: none;
+    
 
     &::after {
       @extend .button_dot-marker;
@@ -16,9 +17,11 @@
       margin-inline: 3px;
       -webkit-transition: transform 0.3s ease;
       transition: transform 0.3s ease;
+      content: '';
     }
 
     &:checked::after {
+      background: $primary-gradient;
       -webkit-transform: translateX(20px);
       transform: translateX(20px);
     }
