Like button refactoring

--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -13,6 +13,7 @@
     color: $valhalla;
     opacity: .25;
     cursor: pointer;
+    appearance: none;
 
     &:checked {
       border-color: $perfume;
