--- a/src/components/buttons/like/like.pug
+++ b/src/components/buttons/like/like.pug
@@ -1,10 +1,13 @@
 mixin likeButtons( items=[] )
+  - let buttonsCount = 0
+
   each item in items
     - const iconCode = item.pressed ? 'favorite' : 'favorite_border'
     - const buttonChecked = item.pressed ? true : false
+    - const itemId = item.groupname + '_' + ++buttonsCount
 
     .like-button
-      input.like-button__elem( type='checkbox' checked=buttonChecked )
+      input.like-button__elem( type='checkbox' checked=buttonChecked id=itemId )
       .like-button__text
-        label.like-button__text_icon.material-icons-outlined #{iconCode}
-        label.like-button__text_counter #{item.likecount}
+        label.like-button__text_icon.material-icons-outlined( for=itemId ) #{iconCode}
+        label.like-button__text_counter( for=itemId ) #{item.likecount}
