--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -7,6 +7,7 @@ include ../components/buttons/toggle/toggle.pug
 include ../components/buttons/like/like.pug
 include ../components/buttons/radio/radio.pug
 include ../components/buttons/checkbox/checkbox.pug
+include ../components/buttons/mean-oval/mean-oval.pug
 
 body.ui-kit__body
   +header()
@@ -121,6 +122,18 @@ body.ui-kit__body
           .star-rate__elem.additional-padding.twinline-gap_own
             +stars([4, 5])
       .form-elements-column
+        .block__mean-oval-buttons.indentation_double
+          +titleBar("buttons")
+          .mean-oval-buttons__array 
+            +meanOvalButtons([
+              { type: "contained" },
+              { type: "contained", disabled: true },
+              { type: "outlined" },
+              { type: "outlined", disabled: true },
+              { type: "text" },
+              { type: "text", disabled: true },
+              { type: "contained", text: "перейти к оплате", iconname: "arrow_forward" },
+            ])
     .form-elements__wrap_upper-middle.indentation_wrap
       .form-elements-column
         .block__dropdowns_in-action.indentation_single
