--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -124,7 +124,7 @@ body.ui-kit__body
       .form-elements-column
         .block__mean-oval-buttons.indentation_double
           +titleBar("buttons")
-          .mean-oval-buttons__array 
+          .mean-oval-buttons__array.additional-padding 
             +meanOvalButtons([
               { type: "contained" },
               { type: "contained", disabled: true },
