--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -132,7 +132,7 @@ body.ui-kit__body
               { type: "outlined", disabled: true },
               { type: "text" },
               { type: "text", disabled: true },
-              { type: "contained", text: "перейти к оплате", iconname: "arrow_forward" },
+              { type: "contained", text: "перейти к оплате", iconname: "arrow_forward", widthkey: "100" },
             ])
     .form-elements__wrap_upper-middle.indentation_wrap
       .form-elements-column
