--- a/src/components/buttons/mean-oval/mean-oval.pug
+++ b/src/components/buttons/mean-oval/mean-oval.pug
@@ -1,9 +1,10 @@
 mixin meanOvalButtons( items=[] )
   each item in items
     - const buttonText = item.text ? item.text : 'click me'
-    - const widthKey = item.widthkey ? item.widthkey : '100'
+    - const widthKey = item.widthkey ? item.widthkey : '30'
+    - const widthClass = item.type === 'text' ? '' : `elem__width_${widthKey}`
 
-    .mean-oval-button( class =`elem-width_${widthKey}` )
+    .mean-oval-button( class=widthClass )
       case item.type 
         when 'contained'
           button.mean-oval-button__elem.button-style_contained( disabled=item.disabled ) #{buttonText}
