--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -130,13 +130,13 @@ body.ui-kit__body
           +titleBar("buttons")
           .mean-oval-buttons__array.additional-padding
             +meanOvalButtons([
-              { type: "contained" },
-              { type: "contained", onhover: true },
-              { type: "outlined" },
-              { type: "outlined", onhover: true },
-              { type: "text" },
-              { type: "text", onhover: true },
-              { type: "contained", text: "перейти к оплате", iconname: "arrow_forward", widthkey: "100" },
+              { type: "contained", id:"uik-fe-mob_1" },
+              { type: "contained", id:"uik-fe-mob_2", onhover: true },
+              { type: "outlined", id:"uik-fe-mob_3" },
+              { type: "outlined", id:"uik-fe-mob_4", onhover: true },
+              { type: "text", id:"uik-fe-mob_5" },
+              { type: "text", id:"uik-fe-mob_6", onhover: true },
+              { type: "contained", id:"uik-fe-mob_7", text: "перейти к оплате", iconname: "arrow_forward", widthkey: "100" },
             ])
     .form-elements__wrap_upper-middle.indentation_wrap
       .form-elements-column
