--- a/src/components/buttons/mean-oval/mean-oval.scss
+++ b/src/components/buttons/mean-oval/mean-oval.scss
@@ -40,6 +40,8 @@
     border: none;
     background: transparent;
     text-transform: uppercase;
+    font-size: 12px;
+    font-family: inherit;
     font-weight: bold;
     color: #fff;
     z-index: 3;
@@ -76,4 +78,29 @@
   width: 100%;
   display: inline-flex;
   flex-flow: row wrap;
+}
+
+.animated {
+  transition: box-shadow 150ms ease-out;
+  &:focus {
+    box-shadow: 0 0 0 8px rgba(#fff, 0.5);
+  }
+}
+
+.ripple {
+  background-color: $perfume;
+  border-radius: 50%;
+  mix-blend-mode: screen;
+  animation: ripple 1250ms ease-out forwards, fade 1500ms ease-out forwards;
+}
+
+@keyframes ripple {
+  0%   { transform: translate(-100%, -100%); }
+  80%  { transform: translate(-100%, -100%) scale(50); }
+  100% { transform: translate(-100%, -100%) scale(50); opacity: 0; }
+}
+
+@keyframes fade {
+  0%   { opacity: 1; }
+  100% { opacity: 0; }
 }
