--- a/src/components/buttons/mean-oval/mean-oval.scss
+++ b/src/components/buttons/mean-oval/mean-oval.scss
@@ -46,6 +46,10 @@
     color: #fff;
     z-index: 3;
 
+    &:active {
+      @extend .ripple;
+    }
+
     &:disabled {
       & + label {
         opacity: .5;
@@ -80,27 +84,12 @@
   flex-flow: row wrap;
 }
 
-.animated {
-  transition: box-shadow 150ms ease-out;
-  &:focus {
-    box-shadow: 0 0 0 8px rgba(#fff, 0.5);
-  }
-}
-
 .ripple {
-  background-color: $perfume;
-  border-radius: 50%;
-  mix-blend-mode: screen;
-  animation: ripple 1250ms ease-out forwards, fade 1500ms ease-out forwards;
+  animation: pop 300ms ease;
 }
 
-@keyframes ripple {
-  0%   { transform: translate(-100%, -100%); }
-  80%  { transform: translate(-100%, -100%) scale(50); }
-  100% { transform: translate(-100%, -100%) scale(50); opacity: 0; }
-}
-
-@keyframes fade {
-  0%   { opacity: 1; }
-  100% { opacity: 0; }
+@keyframes pop {
+  0%   { transform: scale(1); }
+  66%  { transform: scale(0.9); }
+  100% { transform: scale(1); }
 }
