--- a/src/components/buttons/radio/radio.scss
+++ b/src/components/buttons/radio/radio.scss
@@ -7,6 +7,10 @@
   align-items: center;
   margin-right: 20px;
 
+  & * {
+    cursor: pointer;
+  }
+
   &__elem {
     position: relative;
     display: flex;
