--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -124,7 +124,7 @@ body.ui-kit__body
             +stars([4, 5])
       .form-elements-column
         .block__range-slider
-          +titleBar("range slider")
+          +titleBar("range slider", "5 000₽ - 10 000₽", "range-slider-marker")
           .range-slider__container.additional-padding 
             +rangeSlider()
         .block__mean-oval-buttons.indentation_double
